# presentation/controllers/FeedingHandler.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"encoding/json"
 	"kpo-mini-dz2/domain/model"
+	RP "kpo-mini-dz2/domain/repositoriesInterfaces"
 	"kpo-mini-dz2/infrastructure/repositories"
 	"net/http"
 	"time"
@@ -12,7 +13,7 @@ import (
 )
 
 type FeedingHandler struct {
-	Repo *repositories.InMemoryFeedingScheduleRepository
+	Repo RP.IFeedingScheduleRepository
 }
 
 func NewFeedingHandler(repo *repositories.InMemoryFeedingScheduleRepository) *FeedingHandler {
@@ -32,6 +33,17 @@ type RemoveScheduleRequest struct {
 	FeedingTime time.Time `json:"feedingTime"`
 }
 
+// AddSchedule godoc
+// @Summary Add a new feeding schedule
+// @Description Adds a new feeding schedule for an animal with specified feeding time and food type
+// @Tags feeding_schedule
+// @Accept json
+// @Produce json
+// @Param schedule body AddScheduleRequest true "Feeding schedule information"
+// @Success 201 {object} map[string]string
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal server error"
+// @Router /api/schedules [post]
 func (h *FeedingHandler) AddSchedule(w http.ResponseWriter, r *http.Request) {
 	var req AddScheduleRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -57,6 +69,16 @@ func (h *FeedingHandler) AddSchedule(w http.ResponseWriter, r *http.Request) {
 	})
 }
 
+// DeleteSchedule godoc
+// @Summary Delete feeding schedule
+// @Description Delete schedule by animalID and time from repository
+// @Tags feeding_schedule
+// @Accept json
+// @Produce json
+// @Success 201 {object} map[string]string
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal server error"
+// @Router /api/schedules [delete]
 func (h *FeedingHandler) RemoveSchedule(w http.ResponseWriter, r *http.Request) {
 	var req RemoveScheduleRequest
 
@@ -77,6 +99,16 @@ func (h *FeedingHandler) RemoveSchedule(w http.ResponseWriter, r *http.Request) 
 	})
 }
 
+// GetSchedule godoc
+// @Summary Get feeding schedule by ID
+// @Description Get feeding schedule by ID
+// @Tags feeding_schedule
+// @Accept json
+// @Produce json
+// @Success 201 {object} model.FeedingSchedule
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal server error"
+// @Router /api/schedules [get]
 func (h *FeedingHandler) GetAnimalSchedules(w http.ResponseWriter, r *http.Request) {
 	animalIDStr := chi.URLParam(r, "animalID")
 	animalID, err := uuid.Parse(animalIDStr)
